--- a/index.html
+++ b/index.html
@@ -8,26 +8,55 @@
     <link href="https://fonts.googleapis.com/css2?family=Arbutus+Slab&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div id = 'nav'>
-		<a id = 'btn1' class = 'nav_btn_ctner sans'>
-			<div class = 'nav_btn_base'>Tidal Basin</div>
-			<div class = 'nav_btn_mask'>Tidal Basin</div>
-		</a>
-		<a id = 'btn2' class = 'nav_btn_ctner sans'>
-			<div class = 'nav_btn_base'>Tidal Basin</div>
-			<div class = 'nav_btn_mask'><div class = 'mask_text_holder'>Tidal Basin</div></div>
-		</a>
+	<p class = 'description description-title'>Navigation button: hover state</p>
+	
+	<div id = 'nav_ctner'>
+		<p class = 'description'>1</p>
+		<div id = 'nav1' class = 'nav'>
+			<a id = 'btn1' class = 'nav_btn_ctner sans'>
+				<div class = 'nav_btn_base'>Tidal Basin</div>
+				<div class = 'nav_btn_mask'>Tidal Basin</div>
+			</a>
+		</div>
+		<p class = 'description'>2</p>
+		<div id = 'nav2' class = 'nav'>
+			<a id = 'btn2' class = 'nav_btn_ctner sans'>
+				<div class = 'nav_btn_base'>Tidal Basin</div>
+				<div class = 'nav_btn_mask'><div class = 'mask_text_holder'>Tidal Basin</div></div>
+			</a>
+		</div>
 	</div>
-	<div id = 'title_ctner'>
-		<div id = 'title1' class = 'title_ctner'>
-			<div class = 'title_mask'>
-				<div class = 'title_text'>Project</div>
-				<div class = 'title_underline'></div>
+
+	<p class = 'description description-title'>Layout and scrolling animation</p>
+	<div id = 'project_origins_ctner' class = ''>
+		<div id = 'project_origins_col1' class = 'col'>
+			<div id = 'project_origins_image_1' class = 'image_holder'>
+				<div class = 'image'></div>
+				<div class = 'image_overlay'></div>
 			</div>
-			<div class = 'title_mask'>
-				<div class = 'title_text'>Origins</div>
-				<div class = 'title_underline'></div>
+			<div id = 'project_origins_image_2' class = 'image_holder'>
+				<div class = 'image'></div>
+				<div class = 'image_overlay'></div>
 			</div>
+		</div><div id = 'project_origins_col2' class = 'col'>
+			<div class = 'text_holder'>
+				<div id = 'title1' class = 'title_ctner'>
+					<div class = 'title_mask'>
+						<h1 class = 'title_text'>Project</h1>
+						<div class = 'title_underline'></div>
+					</div>
+					<div class = 'title_mask'>
+						<h1 class = 'title_text'>Origins</h1>
+						<div class = 'title_underline'></div>
+					</div>
+				</div>
+			
+				<p class = 'body_text sans'>In 2019 the National Trust for Historic Preservation added the Tidal Basin to its portfolio of National Treasures and initiated, together with the Trust for the National Mall, the National Park Service, and American Express, the Tidal Basin Ideas Lab. This initiative precedes and supplements the National Park Service’s mandated environmental review, master planning, and detailed design that ultimately leads to funding and implementation. This website presents the efforts of that initiative—a critical first step in a multi-phase process—and invites the public to get involved.</p>
+			</div><div id = 'project_origins_image_3' class = 'image_holder'>
+				<div class = 'image'></div>
+				<div class = 'image_overlay'></div>
+			</div>
+			
 		</div>
 	</div>
 	<script src="scripts/var.js"></script>
