--- a/index.html
+++ b/index.html
@@ -58,6 +58,43 @@
 			</div>
 		</div>
 	</div>
+
+	<p class = 'description description-title'>&ldquo;Sticky&rdquo; text</p>
+	<div id = 'sticky_ctner' >
+		<div id = 'ch1_ctner' class = 'ch_ctner'>
+			<div class = 'timeline'></div>
+			<h1 id = 'ch1_title' class = 'ch_title' >1<br>Infrastructure</h1>
+			<div id = 'sticky_col_left' class = 'left-col col history_image_ctner'>
+				<img src = 'asset/images/1-1.png'>
+				<img src = 'asset/images/1-2.jpg'>
+				<img src = 'asset/images/1-3.jpg'>
+				<img src = 'asset/images/1-4.png'>
+				<img src = 'asset/images/1-5.png'>
+				<img src = 'asset/images/1-6.png'>
+			</div><div id = 'sticky_col_right' class = 'right-col col sans body_text'>
+				After a flood in 1881, the Army Corps of Engineers dredged the Potomac River and used sediment from the Washington Channel shipping canal to fill in the tidal wetlands. Six years later, in 1887, engineers installed gates at the entrance and exit of a new pond (now the Tidal Basin). It was designed so that at high tide, the gates open and fill the basin with water. At low tide, the water exits into the Washington Channel, and the rush of exiting water sweeps the leftover sediment away.
+
+	Kutz Memorial Bridge, which carries Independence Avenue across the Tidal Basin, was designed by Paul Cret and completed in 1943. Archie Alphonso Alexander, African American engineer, built the bridge with his partner Maurice Repass. The pair hired both African American and white laborers and refused to racially segregate the work site.
+			</div>
+		</div>
+		<div id = 'ch2_ctner' class = 'ch_ctner'>
+			<div class = 'timeline'></div>
+			<h1 id = 'ch1_title' class = 'ch_title' >2<br>Public Space <br>and Recreation</h1>
+			<div id = 'sticky_col_left' class = 'left-col col history_image_ctner'>
+				<img src = 'asset/images/1-1.png'>
+				<img src = 'asset/images/1-2.jpg'>
+				<img src = 'asset/images/1-3.jpg'>
+				<img src = 'asset/images/1-4.png'>
+				<img src = 'asset/images/1-5.png'>
+				<img src = 'asset/images/1-6.png'>
+			</div><div id = 'sticky_col_right' class = 'right-col col sans body_text'>
+				After a flood in 1881, the Army Corps of Engineers dredged the Potomac River and used sediment from the Washington Channel shipping canal to fill in the tidal wetlands. Six years later, in 1887, engineers installed gates at the entrance and exit of a new pond (now the Tidal Basin). It was designed so that at high tide, the gates open and fill the basin with water. At low tide, the water exits into the Washington Channel, and the rush of exiting water sweeps the leftover sediment away.
+
+	Kutz Memorial Bridge, which carries Independence Avenue across the Tidal Basin, was designed by Paul Cret and completed in 1943. Archie Alphonso Alexander, African American engineer, built the bridge with his partner Maurice Repass. The pair hired both African American and white laborers and refused to racially segregate the work site.
+			</div>
+		</div>
+	</div>
+
 	<script src="scripts/var.js"></script>
 	<script src="scripts/script.js"></script>
 </body>
