--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
 			</div>
 		</div>
 	</div>
+	<p class = 'description description-title'>Proposal scroll</p>
+	<div id = 'scroll_ctner'>
+		<div></div>
+		<div></div>
+	</div>
 
 	<script src="scripts/var.js"></script>
 	<script src="scripts/script.js"></script>
