--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
 			
 				<p class = 'body_text sans'>In 2019 the National Trust for Historic Preservation added the Tidal Basin to its portfolio of National Treasures and initiated, together with the Trust for the National Mall, the National Park Service, and American Express, the Tidal Basin Ideas Lab. This initiative precedes and supplements the National Park Service’s mandated environmental review, master planning, and detailed design that ultimately leads to funding and implementation. This website presents the efforts of that initiative—a critical first step in a multi-phase process—and invites the public to get involved.</p>
 			</div><div id = 'project_origins_image_3' class = 'image_holder'>
-				<div class = 'image'></div>
+				<div class = 'image_bg'></div>
 				<div class = 'image_overlay'></div>
 			</div>
 		</div><div id = 'project_origins_col1' class = 'col'>
 			<div id = 'project_origins_image_1' class = 'image_holder'>
-				<div class = 'image'></div>
+				<div class = 'image_bg'></div>
 				<div class = 'image_overlay'></div>
 			</div>
 			<div id = 'project_origins_image_2' class = 'image_holder'>
-				<div class = 'image'></div>
+				<div class = 'image_bg'></div>
 				<div class = 'image_overlay'></div>
 			</div>
 		</div>
@@ -64,33 +64,91 @@
 		<div id = 'ch1_ctner' class = 'ch_ctner'>
 			<div class = 'timeline'></div>
 			<h1 id = 'ch1_title' class = 'ch_title' >1<br>Infrastructure</h1>
-			<div id = 'sticky_col_left' class = 'left-col col history_image_ctner'>
-				<img src = 'asset/images/1-1.png'>
-				<img src = 'asset/images/1-2.jpg'>
-				<img src = 'asset/images/1-3.jpg'>
-				<img src = 'asset/images/1-4.png'>
-				<img src = 'asset/images/1-5.png'>
-				<img src = 'asset/images/1-6.png'>
-			</div><div id = 'sticky_col_right' class = 'right-col col sans body_text'>
-				After a flood in 1881, the Army Corps of Engineers dredged the Potomac River and used sediment from the Washington Channel shipping canal to fill in the tidal wetlands. Six years later, in 1887, engineers installed gates at the entrance and exit of a new pond (now the Tidal Basin). It was designed so that at high tide, the gates open and fill the basin with water. At low tide, the water exits into the Washington Channel, and the rush of exiting water sweeps the leftover sediment away.
+			<div class = 'history_section_ctner' >
+				<div id = '' class = 'sticky_col_left left-col col history_image_ctner'>
+					<div class = 'image_holder'>
+						<img class = 'image' src = 'asset/images/1-1.png'>
+						<div class = 'image_overlay'></div>
+					</div>
+					<div class = 'caption'>After a flood in 1881, the Army Corps of Engineers dredged the Potomac River and used sediment from the Washington Channel shipping canal to fill in the tidal.</div>
+					<div class = 'image_holder'>
+						<img class = 'image' src = 'asset/images/1-2.jpg'>
+						<div class = 'image_overlay'></div>
+					</div>
+					<div class = 'caption'>It was designed so that at high tide, the gates open and fill the basin with water. </div>
+					<div class = 'image_holder'>
+						<img class = 'image' src = 'asset/images/1-3.jpg'>
+						<div class = 'image_overlay'></div>
+					</div>
+					<div class = 'caption'>Kutz Memorial Bridge, which carries Independence Avenue across the Tidal Basin, was designed by Paul Cret and completed in 1943. Archie Alphonso Alexander, African American engineer, built the bridge with his partner Maurice Repass.</div>
+					<div class = 'image_holder'>
+						<img class = 'image' src = 'asset/images/1-4.png'>
+						<div class = 'image_overlay'></div>
+					</div>
+					<div class = 'caption'>The pair hired both African American and white laborers and refused to racially segregate the work site.</div>
+					<div class = 'image_holder'>
+						<img class = 'image' src = 'asset/images/1-5.png'>
+						<div class = 'image_overlay'></div>
+					</div>
+					<div class = 'caption'>After a flood in 1881, the Army Corps of Engineers dredged the Potomac River and used sediment from the Washington Channel shipping canal to fill in the tidal.</div>
+					<div class = 'image_holder'>
+						<img class = 'image' src = 'asset/images/1-6.png'>
+						<div class = 'image_overlay'></div>
+					</div>
+					<div class = 'caption'>It was designed so that at high tide, the gates open and fill the basin with water.</div>
+				</div><div id = '' class = 'sticky_col_right right-col col sans body_text'>
+					After a flood in 1881, the Army Corps of Engineers dredged the Potomac River and used sediment from the Washington Channel shipping canal to fill in the tidal wetlands. Six years later, in 1887, engineers installed gates at the entrance and exit of a new pond (now the Tidal Basin). It was designed so that at high tide, the gates open and fill the basin with water. At low tide, the water exits into the Washington Channel, and the rush of exiting water sweeps the leftover sediment away.
 
-	Kutz Memorial Bridge, which carries Independence Avenue across the Tidal Basin, was designed by Paul Cret and completed in 1943. Archie Alphonso Alexander, African American engineer, built the bridge with his partner Maurice Repass. The pair hired both African American and white laborers and refused to racially segregate the work site.
+		Kutz Memorial Bridge, which carries Independence Avenue across the Tidal Basin, was designed by Paul Cret and completed in 1943. Archie Alphonso Alexander, African American engineer, built the bridge with his partner Maurice Repass. The pair hired both African American and white laborers and refused to racially segregate the work site.
+				</div>
 			</div>
 		</div>
 		<div id = 'ch2_ctner' class = 'ch_ctner'>
 			<div class = 'timeline'></div>
 			<h1 id = 'ch1_title' class = 'ch_title' >2<br>Public Space <br>and Recreation</h1>
-			<div id = 'sticky_col_left' class = 'left-col col history_image_ctner'>
-				<img src = 'asset/images/1-1.png'>
-				<img src = 'asset/images/1-2.jpg'>
-				<img src = 'asset/images/1-3.jpg'>
-				<img src = 'asset/images/1-4.png'>
-				<img src = 'asset/images/1-5.png'>
-				<img src = 'asset/images/1-6.png'>
-			</div><div id = 'sticky_col_right' class = 'right-col col sans body_text'>
-				After a flood in 1881, the Army Corps of Engineers dredged the Potomac River and used sediment from the Washington Channel shipping canal to fill in the tidal wetlands. Six years later, in 1887, engineers installed gates at the entrance and exit of a new pond (now the Tidal Basin). It was designed so that at high tide, the gates open and fill the basin with water. At low tide, the water exits into the Washington Channel, and the rush of exiting water sweeps the leftover sediment away.
-
-	Kutz Memorial Bridge, which carries Independence Avenue across the Tidal Basin, was designed by Paul Cret and completed in 1943. Archie Alphonso Alexander, African American engineer, built the bridge with his partner Maurice Repass. The pair hired both African American and white laborers and refused to racially segregate the work site.
+			<div class = 'history_section_ctner'>
+				<div id = '' class = 'sticky_col_left left-col col sans body_text'>
+					The engineering effort resulted in the creation of over 621 acres of reclaimed land from dredged materials and fill—including the 118-acre Tidal Basin and the creation of a seawall to protect the reclaimed land from erosion. In 1897, Congress designated these lands as Potomac Park to be used for the “recreation and pleasure of the people” with drives, bridle paths, swimming and boating facilities, and a bandstand.
+				</div><div id = '' class = 'sticky_col_right right-col col history_image_ctner'>
+					 <div class = 'image_holder'>
+						<img class = 'image' src = 'asset/images/1-1.png'>
+						<div class = 'image_overlay'></div>
+					</div>
+					<div class = 'image_holder'>
+						<img class = 'image' src = 'asset/images/1-2.jpg'>
+						<div class = 'image_overlay'></div>
+					</div>
+				</div>
+			</div>
+			<div class = 'history_section_ctner'>
+				<div id = '' class = 'sticky_col_left left-col col sans body_text'>
+					Winter Festivities: January 17, 1912 basin transformed into a “fairyland of twinkling lights” and 1934 holly trees planted to provide red berries in winter<br><br>
+					Swan Boats: June 15, 1926 first motorized swan boats arrive, different versions exist today.<br><br>
+					Tidal Basin Bathing Beach Battles: free beach where Jefferson Memorial is now located opens in 1918. Only whites allowed; by 1922, Congress appropriates money to build African American beach, but it does not materialize. Beach closed by Congress by 1925 due to mixture of public health concerns and racism.
+				</div><div id = '' class = 'sticky_col_right right-col col history_image_ctner'>
+					<div class = 'image_holder'>
+						<img class = 'image' src = 'asset/images/1-3.jpg'>
+						<div class = 'image_overlay'></div>
+					</div>
+					<div class = 'image_holder'>
+						<img class = 'image' src = 'asset/images/1-4.png'>
+						<div class = 'image_overlay'></div>
+					</div>
+				</div>
+			</div>
+			<div class = 'history_section_ctner'>
+				<div id = '' class = 'sticky_col_left left-col col sans body_text'>
+					Fishing: In 1925, Tidal Basin best place to fish in DC. That year, US Bureau of Fisheries stocks it with fish. Unlike beach, both black and white people can fish. Pollution results in problems and by 1970 signs appear that alert people that fish are contaminated. Since the passage of the Clean Water Act of 1972, water is cleaner and fishing is again permitted. 
+				</div><div id = '' class = 'sticky_col_right right-col col history_image_ctner'>
+					<div class = 'image_holder'>
+						<img class = 'image' src = 'asset/images/1-5.png'>
+						<div class = 'image_overlay'></div>
+					</div>
+					<div class = 'image_holder'>
+						<img class = 'image' src = 'asset/images/1-6.png'>
+						<div class = 'image_overlay'></div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
