--- a/landing/index.html
+++ b/landing/index.html
@@ -8,29 +8,102 @@
     <link href="https://fonts.googleapis.com/css2?family=Arbutus+Slab&display=swap" rel="stylesheet">
 </head>
 <body>
+	<div id = 'nav' class = 'sans float_ctner'>
+		<div id = 'nav_bg'></div>
+		<div id = 'nav_left' class = 'nav_section'>
+			<a class = 'nav_btn_ctner' href = ''>
+				<div class = 'nav_btn_bg'></div>
+				<p class = 'nav_btn_base'>Proposals</p>
+				<div class = 'nav_btn_mask'>Proposals</div>
+			</a>
+			<a class = 'nav_btn_ctner' href = ''>
+				<div class = 'nav_btn_bg'></div>
+				<p class = 'nav_btn_base'>Challenges</p>
+				<div class = 'nav_btn_mask'>Challenges</div>
+			</a>
+		</div>
+		<div id = 'nav_center' class = 'nav_section'><img id = 'logo_tb' src = 'asset/images/logo-tb-w.svg'></div>
+		<div id = 'nav_right' class = 'nav_section'>
+			<a class = 'nav_btn_ctner' href = ''>
+				<div class = 'nav_btn_bg'></div>
+				<p class = 'nav_btn_base'>Histories</p>
+				<div class = 'nav_btn_mask'>Histories</div>
+			</a>
+			<a class = 'nav_btn_ctner' href = ''>
+				<div class = 'nav_btn_bg'></div>
+				<p class = 'nav_btn_base'>Participate</p>
+				<div class = 'nav_btn_mask'>Participate</div>
+			</a>
+			<a class = 'nav_btn_ctner' href = ''>
+				<div class = 'nav_btn_bg'></div>
+				<p class = 'nav_btn_base'>About</p>
+				<div class = 'nav_btn_mask'>About</div>
+			</a>
+		</div>
+	</div>
 	<div id = 'landing_ctner'>
-		<div id = 'landing_section_1' class = 'landing_section'>
-			<div class = 'landing_bg_holder'>
-				<div id = 'landing_bg_1' class = 'landing_bg'></div>
+		<div id = 'opening_section_1' class = 'opening_section'>
+			<div class = 'opening_bg_holder'>
+				<div id = 'opening_bg_1' class = 'opening_bg'></div>
 				<div class = 'background_overlay'></div>
 			</div>
-			<div id = 'landing_logo_ctner' ><img id ='landing_logo' src = 'asset/images/logo.svg'></div>
-			<div class = 'landing_content float_ctner'>
+			<div id = 'opening_logo_ctner' ><img id ='opening_logo' src = 'asset/images/logo.svg'></div>
+			<div class = 'opening_content float_ctner'>
 				<h1 class = 'title text_fullw'>The National Mall Tidal Basin is a public place like no other in the country—indeed, in the world.</h1>
 				<p class = 'body_text sans text_halfw float_right'>Adjacent to the National Mall, the Tidal Basin comprises the beloved blossoming cherry trees and monuments to leaders such as Thomas Jefferson and Martin Luther King, Jr. Its beauty is matched by the complexity of its many meanings, as experienced by diverse audiences. Yet, despite its storied place in the national imagination, the Tidal Basin is very much at risk. The instability of the land underneath, daily flooding, and crumbling infrastructure threaten its future.</p>
 			</div>
 		</div>
-		<div id = 'landing_section_2' class = 'landing_section float_ctner'>
-			<div class = 'landing_bg_holder'>
-				<div id = 'landing_bg_2' class = 'landing_bg'></div>
+		<div id = 'opening_section_2' class = 'opening_section float_ctner'>
+			<div class = 'opening_bg_holder'>
+				<div id = 'opening_bg_2' class = 'opening_bg'></div>
 				<div class = 'background_overlay'></div>
 			</div>
-			<div class = 'landing_content'>
-				<h1 class = 'title text_fullw'>Without prompt and extensive action, this national treasure will be lost.</h1>
+			<div class = 'opening_content'>
+				<h1 class = 'title'>Without prompt and extensive action, this national treasure will be lost.</h1>
+			</div>
+			<div id = 'landing_content' >
+				<div id = 'collective_statement' class = 'landing_section float_ctner'>
+					<div>
+						<h1 class = 'title half_width inline_block'>The Tidal Basin Ideas Lab is an urgent call to action.</h1><div class = 'half_width inline_block'>
+							<div id = 'collective_statement_image_1' class = 'image_holder bg_image_holder'>
+								<div class = 'image_bg'></div>
+								<div class = 'image_overlay'></div>
+							</div>
+						</div>
+					</div>
+					<div>
+						<div class = 'half_width inline_block'>
+							<div id = 'collective_statement_image_2' class = 'image_holder bg_image_holder'>
+								<div class = 'image_bg'></div>
+								<div class = 'image_overlay'></div>
+							</div>
+							<div id = 'collective_statement_image_3' class = 'image_holder bg_image_holder'>
+								<div class = 'image_bg'></div>
+								<div class = 'image_overlay'></div>
+							</div>
+						</div><p class = 'body_text sans half_width inline_block'>To rescue and transform the nation’s most iconic memorial landscape, we must balance preservation with the realities of climatic, geological, and social changes. So profound are the effects of these forces that conventional responses—rebuilding infrastructure or adding safeguards such as seawalls—will only delay, but not prevent, the submersion of the Tidal Basin and its monuments under water. The challenges are undeniably steep, but they are not insurmountable. We have imagined bold moves and charted courses of action to be realized over the coming century. Yet, our work is not merely reactive to current and projected conditions, nor is it only a search for solutions to specific problems. It is an opportunity to posit new ways of thinking about ecology, social space, narratives, and experiences, pushing forward our understanding of what memorials and public landscapes can be. The time to begin this process is now.<br><br>
+							James Corner<br>James Corner Field Operation<br><br>
+							Jennifer Guthrie<br>GGN<br><br>
+							Susannah C. Drake<br>DLANDstudio<br><br>
+							Gary Hilderbrand<br>Reed Hilderbrand<br><br>
+							Walter Hood<br>Hood Design Studio
+						</p>
+					</div>
+				</div>
+				<div id = 'main_video' class = 'landing_section landing_section_full'>
+					<div class = 'video_ctner'>
+						<div>
+							<img src = 'asset/images/main_video.jpg'>
+							<div class = 'image_overlay'></div>
+							<img class = 'play_btn' src = 'asset/images/icon_play.svg'>
+						</div>
+					</div>
+					<div class = 'more_btn'>Learn more about the Proposals</div>
+				</div>
 			</div>
 		</div>
 	</div>
 	<!-- <script src="scripts/var.js"></script> -->
-	<!-- <script src="scripts/script.js"></script> -->
+	<script src="scripts/script.js"></script>
 </body>
 </html>
