--- a/history/index.html
+++ b/history/index.html
@@ -144,6 +144,7 @@
 		</div>
 	</div>
 	</div>	
+	<div id = 'popup' class = ' serif'><p class = 'popup_prompt'>Stay in touch about our campaign to Save the Tidal Basin</p><input class = 'popup_input' placeholder="Enter you email"><p id = 'toggle_email' alttext = 'Submit' class = 'sans'>Enter Email</p><div class = 'cancel'>&#x02A2F;</div></div>
 	<script src="scripts/var.js"></script>
 	<script src="scripts/script.js"></script>
 </body>
