--- a/history/index.html
+++ b/history/index.html
@@ -145,6 +145,25 @@
 	</div>
 	</div>	
 	<div id = 'popup' class = ' serif'><p class = 'popup_prompt'>Stay in touch about our campaign to Save the Tidal Basin</p><input class = 'popup_input' placeholder="Enter you email"><p id = 'toggle_email' alttext = 'Submit' class = 'sans'>Enter Email</p><div class = 'cancel'>&#x02A2F;</div></div>
+	<div id = 'footer'>
+		<div id = 'footer_logo_holder'><img id = 'footer_logo' src = 'asset/images/logo-tb-w.svg'></div>
+		<div id = 'footer_social_holder'>
+			<a id = 'social_facebook' href = '' ><img src = 'asset/images/icons/facebook.svg'></a>
+			<a id = 'social_youtube' href = '' ><img src = 'asset/images/icons/youtube.svg'></a>
+			<a id = 'social_instagram' href = '' ><img src = 'asset/images/icons/instagram.svg'></a>
+			<a id = 'social_twitter' href = '' ><img src = 'asset/images/icons/twitter.svg'></a>
+		</div>
+		<div id = 'footer_logos_holder'>
+			<div id = 'presenterd_holder'>
+				<p class = 'footer sans'>Presented by</p>
+				<img id = 'present_amex' src = 'asset/images/footer_logos/logo_amex.png'>
+			</div><div id = 'sponsored_holder'>
+				<p class = 'footer sans'>Sponsored by</p>
+				<img id = 'sponsor_nthp' src = 'asset/images/footer_logos/logo_nthp.png'>
+				<img id = 'sponsor_tnm' src = 'asset/images/footer_logos/logo_tnm.png'>
+				<img id = 'sponsor_nps' src = 'asset/images/footer_logos/logo_nps.svg'>
+			</div>
+	</div>
 	<script src="scripts/var.js"></script>
 	<script src="scripts/script.js"></script>
 </body>
