--- a/history/index.html
+++ b/history/index.html
@@ -144,7 +144,7 @@
 		</div>
 	</div>
 	</div>	
-	<div id = 'popup' class = ' serif'><p class = 'popup_prompt'>Stay in touch about our campaign to Save the Tidal Basin</p><input class = 'popup_input' placeholder="Enter you email"><p id = 'toggle_email' alttext = 'Submit' class = 'sans'>Enter Email</p><div class = 'cancel'>&#x02A2F;</div></div>
+	<div id = 'popup' class = ' sans'><p class = 'popup_prompt'>Stay in touch about our campaign to Save the Tidal Basin</p><input class = 'popup_input' placeholder="Enter you email"><button id = 'toggle_email' alttext = 'Submit' class = 'sans'>Submit</button><div class = 'cancel'>&#x02A2F;</div></div>
 	<div id = 'footer'>
 		<div id = 'footer_logo_holder'><img id = 'footer_logo' src = 'asset/images/logo-tb-w.svg'></div>
 		<div id = 'footer_social_holder'>
